--- a/app/globals.css
+++ b/app/globals.css
@@ -1,1 +1,14 @@
 @import "tailwindcss";
+
+html,
+body {
+  background: #1e1e1e;
+}
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type="number"] {
+  -moz-appearance: textfield;
+}
