--- a/packages/nextjs/app/globals.css
+++ b/packages/nextjs/app/globals.css
@@ -44,6 +44,7 @@ input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
   -webkit-box-shadow: 0 0 0 30px transparent inset !important;
   -webkit-text-fill-color: white !important;
+  color: white !important;
   transition: background-color 5000s ease-in-out 0s;
 }
 
@@ -51,6 +52,25 @@ input:-webkit-autofill:active {
 input:-moz-autofill {
   background-color: transparent !important;
   color: white !important;
+}
+
+input:-webkit-autofill-background-color {
+  background-color: transparent !important;
+  color: white !important;
+}
+
+/* Additional autofill overrides for better consistency */
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active,
+input:-moz-autofill,
+input:-moz-autofill:hover,
+input:-moz-autofill:focus,
+input:-moz-autofill:active {
+  color: white !important;
+  -webkit-text-fill-color: white !important;
+  -webkit-text-stroke: 0px white !important;
 }
 
 .border-gradient {
@@ -128,3 +148,66 @@ input:-moz-autofill {
     transform: translateY(10px);
   }
 }
+
+/************ Custom Checkbox ************/
+.custom-checkbox {
+  position: relative;
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+}
+
+.custom-checkbox input[type="checkbox"] {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 16px;
+  width: 16px;
+  z-index: 1;
+}
+
+.custom-checkbox .checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 16px;
+  height: 16px;
+  background: #363636;
+  border: none;
+  border-radius: 4px;
+  transition: all 0.2s ease;
+}
+
+.custom-checkbox:hover .checkmark {
+  background: rgba(255, 255, 255, 0.1);
+}
+
+.custom-checkbox input[type="checkbox"]:checked ~ .checkmark {
+  background: linear-gradient(
+    158.39deg,
+    rgba(255, 255, 255, 0.1) 14.19%,
+    rgba(255, 255, 255, 0.025) 50.59%,
+    rgba(255, 255, 255, 0.025) 68.79%,
+    rgba(255, 255, 255, 0.1) 105.18%
+  );
+}
+
+.custom-checkbox .checkmark::after {
+  content: "";
+  position: absolute;
+  display: none;
+  left: 50%;
+  top: 50%;
+  transform: translate(-40%, -60%);
+  width: 19px;
+  height: 19px;
+  background-image: url("/custom-check-icon.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.custom-checkbox input[type="checkbox"]:checked ~ .checkmark::after {
+  display: block;
+}
+/************ Custom Checkbox ************/
