--- a/packages/nextjs/app/theme.css
+++ b/packages/nextjs/app/theme.css
@@ -42,6 +42,11 @@
   /* Blue */
   --primary-blue: #066eff;
 
+  /* Base Container */
+  --base-container-main-background: #e7e7e7;
+  --base-container-sub-background: #f6f6f6;
+  --base-container-sub-border-top: #ffffff;
+
   --secondary: #e0e0e0;
   --tertiary: #0844c5;
 
